replace deprecated annotation with new one add json naming to encode dtos